[gd_scene load_steps=8 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprite/Default/Player/star.png" type="Texture" id=2]
[ext_resource path="res://Sprite/Default/Player/circle.png" type="Texture" id=3]
[ext_resource path="res://Sprite/Default/Player/square.png" type="Texture" id=4]
[ext_resource path="res://Sound/Change_Shape.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/Slide.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 128 )

[node name="Player" type="Area2D"]
rotation = -1.5708
gravity = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Horizontal" type="Tween" parent="."]

[node name="Vertical" type="Tween" parent="."]

[node name="circle" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="star" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.25098 )
position = Vector2( 250, 0 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="square" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.25098 )
position = Vector2( -250, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="SlidePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ShapePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
